.docker/kubernetes/dbserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbserver-deployment
  labels:
    app: hello-rails-on-k8s

spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-rails-on-k8s
      server: db
  template:
    metadata:
      labels:
        app: hello-rails-on-k8s
        server: db
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
